test_scores/negative_dimers/features/Q9NWB7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9NWB7.pkl.xz